# Logika_Dan_Algoritma

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: HandleWindow.cpp.1647DC19EC5C2174.idx  HandleWindow.hpp.AD32DE2FCC02312F.idx  algoritmabensin.cpp.C5296C13A60956B0.idx  algoritmabensin.hpp.B4F45669A694965C.idx  imconfig.h.925C78EF440187DA.idx  imgui.cpp.AB55840F66B54855.idx  imgui.h.77BCDD5FC4F11235.idx  imgui_demo.cpp.C11376B2F832B4F4.idx  imgui_draw.cpp.EEE72326C4011010.idx  imgui_impl_glfw.cpp.80CCDBCDA437362C.idx  imgui_impl_glfw.h.8CDD2F1815657772.idx  imgui_impl_opengl3.cpp.69DD047006871077.idx  imgui_impl_opengl3.h.9A6B78D4B577F276.idx  imgui_impl_opengl3_loader.h.2F84457DCBC18804.idx  imgui_internal.h.2AE4039AE67CC932.idx  imgui_tables.cpp.602C433207899A39.idx  imgui_widgets.cpp.1EF77B11404251D5.idx  imstb_rectpack.h.2D52630AD13A6B17.idx  imstb_textedit.h.5DAC6DB1B8BE8B9D.idx  imstb_truetype.h.541E84B9276DC724.idx  main.cpp.5895177215C0797A.idx  materiarray.cpp.261A24D0E76741E9.idx  pertemuan10.cpp.05AFDF092463D603.idx  pertemuan12.cpp.7451C976BF020A3F.idx  pertemuan13.cpp.FC7519863292CAB6.idx  pertemuan14.cpp.D00AC803FC713AE8.idx  pertemuan2.cpp.E6970642C9AA3BA7.idx  pertemuan6.cpp.A3382073CBB69F51.idx  pertemuan7.cpp.4D7E10C263292CED.idx  prauas.cpp.9EB5581477EBD48C.idx  samplelogic.cpp.F92FD951B6639340.idx  samplelogic.hpp.3A607E84DE92312E.idx  studicase.cpp.0AE885F986D3695F.idx  uas.cpp.FF8304613AAF75BB.idx  uts.cpp.292332B53A44C5EC.idx
src/: algoritmabensin.cpp  algoritmabensin.hpp  main.cpp  samplelogic.cpp  samplelogic.hpp
src/headers/: HandleWindow.hpp  samplelogic.hpp
src/scripts/: HandleWindow.cpp  main.cpp  materiarray.cpp  pertemuan10.cpp  pertemuan12.cpp  pertemuan13.cpp  pertemuan14.cpp  pertemuan2.cpp  pertemuan6.cpp  pertemuan7.cpp  prauas.cpp  samplelogic.cpp  studicase.cpp  uas.cpp  uts.cpp
